--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --no-error-on-unmatched-pattern ",
     "lint": "yarn lint:js",
     "test": "jest"
   },
