--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "@nuxtjs/composition-api": "^0.24.6",
+    "amazon-cognito-identity-js": "^5.0.4",
+    "aws-amplify": "^4.1.3",
+    "aws-amplify-vue": "^2.1.5",
+    "aws-appsync": "^4.0.5",
     "core-js": "^3.15.1",
+    "global": "^4.4.0",
+    "graphql-tag": "^2.12.5",
     "nuxt": "^2.15.7",
     "nuxt-i18n": "^6.27.3",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
+    "@aws-amplify/cli": "^5.1.0",
     "@babel/eslint-parser": "^7.14.7",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
