--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@nuxtjs/composition-api": "^0.24.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "amazon-cognito-identity-js": "^5.0.4",
     "aws-amplify": "^4.1.3",
     "aws-amplify-vue": "^2.1.5",
