--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,6 @@ jobs:
 
       - name: Run linter 👀
         run: yarn lint
-
-      - name: Run tests 🧪
-        run: yarn test
+# TODO: テストを実装するまでコメントアウト
+#       - name: Run tests 🧪
+#         run: yarn test
