--- a/config/.env.development
+++ b/config/.env.development
@@ -3,3 +3,6 @@ AWS_AMPLIFY_AUTH_USER_POOL_ID = "ap-northeast-1_DkesPJnvI"
 AWS_AMPLIFY_AUTH_USER_POOL_WEB_CLIENT_ID = "21meam1cpth0ltl00aj6pcd8uk"
 AWS_AMPLIFY_AUTH_ID_POOL_ID = "ap-northeast-1:4aa1bf8a-853a-44f7-9686-e2b440bbe85a"
 AWS_APPSYNC_ENDPOINT = "https://h4jhv677svbkrepxuizn2lma2u.appsync-api.ap-northeast-1.amazonaws.com/graphql"
+
+# Sentry設定URL
+SENTRY_PROJECT_URL = "https://bc1f10ba79ba4b2da311f68f06220f2c@o922073.ingest.sentry.io/5869063"
