--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@apollo/client": "^3.3.21",
     "@nuxtjs/composition-api": "^0.24.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/sentry": "^5.1.0",
+    "@sentry/tracing": "^6.9.0",
+    "@sentry/vue": "^6.9.0",
     "amazon-cognito-identity-js": "^5.0.4",
     "aws-amplify": "^4.1.3",
     "aws-amplify-vue": "^2.1.5",
