--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@types/node", "nuxt-i18n"]
+    "types": ["@nuxt/types", "@types/node", "nuxt-i18n", "@nuxtjs/sentry"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"],
   "vetur.ignoreProjectWarning": true
