Rename: leave-managementからpaid-leave-managementに変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leave-management-app",
+  "name": "paid-leave-management-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
